--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
     <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
-    <script src='../dist/wiki2json.min.js'></script>
+    <script src='../dist/open2json.min.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
 
     <!-- GEOCODE PLUGIN -->
@@ -66,7 +66,7 @@
                 lonMax: buffer[2],
                 latMax: buffer[3]
             };
-            let provider = new wiki2json.Wiki2json();
+            let provider = new open2json.Open2json();
             provider.query(['osm'], bbox).then(data => {
                 // when data is loaded, update map data source
                 // create data source or just change data
