--- a/demo/index.html
+++ b/demo/index.html
@@ -174,21 +174,33 @@
                 flyTo: {
                     maxDuration: 1000
                 },
+                fitBoundsOptions: {
+                    maxZoom: 16
+                },
                 trackProximity: false
             }));
 
             
             // Add geolocate control to the map.
-            let geolocater = map.addControl(new mapboxgl.GeolocateControl({
+            let geolocater = new mapboxgl.GeolocateControl({
                 positionOptions: {
                     enableHighAccuracy: true
                 },
-                trackUserLocation: true
-            }));
+                trackUserLocation: false
+            })
+            map.addControl(geolocater);
 
-            // try to geolocate
-            geolocater.trigger();
+            // try to geolocate after 500 ms
+            setTimeout(() => { console.log(geolocater.trigger()) }, 500);
 
+            // geoLocater.on('geolocate', function (e) {
+            //     map.flyTo({
+            //         center: [e.coords.longitude, e.coords.latitude],
+            //         zoom: 16, //set zoom 
+            //         maxDuration: 1000
+            //     });
+            // });
+            
         });
     </script>
 
